--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./main.js" defer></script>
   <script src="./more.js" defer></script>
-  <link rel="stylesheet" href="./src/output.css">
+  <link rel="stylesheet" href="./output.css">
   <title>X.Com</title>
 </head>
 
