--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   <script src="./main.js" defer></script>
   <script src="./more.js" defer></script>
-  <link rel="stylesheet" href="./output.css">
+  <link rel="stylesheet" href="./output.css"> 
   <title>X.Com</title>
 </head>
 
@@ -101,18 +101,18 @@
 
     <div class="first hidden sm:hidden md:block xl:w-[25%]">
 
-      <div class="logo invert my-2 py-4  ">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"
-          class=" mx-auto w-8 r-4qtqp9 r-yyyyoo r-dnmrzs r-bnwqim r-lrvibr r-m6rgpd r-lrsllp r-1nao33i r-16y2uox r-8kz0gk  ">
-          <g>
-            <path
-              d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z">
-            </path>
-          </g>
-        </svg>
-      </div>
-
-      <div class="sidebar my-2 flex xl:mx-20 ">
+      <div class="sidebar my-2 flex flex-col xl:mx-20 sticky top-0 ">
+        <div class="logo invert my-2 py-4  ">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"
+            class=" mx-auto w-8 r-4qtqp9 r-yyyyoo r-dnmrzs r-bnwqim r-lrvibr r-m6rgpd r-lrsllp r-1nao33i r-16y2uox r-8kz0gk  ">
+            <g>
+              <path
+                d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z">
+              </path>
+            </g>
+          </svg>
+        </div>
+  
         <ul class="flex flex-col text-2xl  space-y-3">
           <li
             class="flex items-center justify-start gap-3 w-fit px-5 py-0.5 hover:bg-slate-900 hover:cursor-pointer rounded-full transition-all duration-25 ease-in hover:scale-105">
@@ -641,98 +641,98 @@
 
     </div>
 
-    <div class="third hidden xl:w-[35%] xl:block">
-      <div class="search mx-2">
-        <input type="text" name="" id="" placeholder="Search"
-          class="w-[65%] rounded-full hover:cursor-pointer bg-gray-900 px-3 py-1">
-      </div>
-
-      <div class="whats w-[65%] bg-[#16181c] mx-2 my-4 py-5 rounded-xl space-y-3">
-
-        <h1 class="text-xl font-medium px-3">Whats Happening</h1>
-
-        <div
-          class="item  border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900">
-          <p class="text-sm text-gray-400">Trending in India</p>
-          <h3 class="text-xl font-bold"># Missile Attack</h3>
-          <p class="text-sm text-gray-400">40.5k posts</p>
+    <div class="third hidden xl:w-[35%] xl:block" >
+      <div class="sticky -top-10">
+        <div class="search mx-2 ">
+          <input type="text" name="" id="" placeholder="Search"
+            class="w-[65%] rounded-full hover:cursor-pointer bg-gray-900 px-3 py-1">
         </div>
-        <div
-          class="item  border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900">
-          <p class="text-sm text-gray-400">Trending in Youtube</p>
-          <h3 class="text-xl font-bold"># Code With Harry</h3>
-          <p class="text-sm text-gray-400">20.7k posts</p>
-        </div>
-        <div
-          class="item  border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900">
-          <p class="text-sm text-gray-400">What's New</p>
-          <h3 class="text-xl font-bold"># React JS Technology</h3>
-          <p class="text-sm text-gray-400">450.2k posts</p>
-        </div>
-
-
-        <a href="#" class="px-3 text-blue-600 hover:text-blue-500 hover:text-[1.025rem]">Show more ...</a>
-
-      </div>
-
-      <div class="who w-[65%] bg-[#16181c] mx-2 my-4 py-5 rounded-xl space-y-3">
-
-        <h1 class="text-xl  font-bold px-3">Who To Follow</h1>
-
-
-        <div
-          class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900 relative">
-          <div class="flex gap-2">
-            <div class="w-12">
-              <img class="w-fit rounded-full" src="./assets/images/Akasha.png" alt="" srcset="">
-            </div>
-            <div class="flex flex-col">
-              <h3 class="text-xl font-medium">Akash K R</h3>
-              <p class="text-sm text-gray-400">43.2k Followers</p>
-            </div>
+  
+        <div class="whats w-[65%] bg-[#16181c] mx-2 my-4 py-5 rounded-xl space-y-3">
+  
+          <h1 class="text-xl font-medium px-3">Whats Happening</h1>
+  
+          <div
+            class="item  border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900">
+            <p class="text-sm text-gray-400">Trending in India</p>
+            <h3 class="text-xl font-bold"># Missile Attack</h3>
+            <p class="text-sm text-gray-400">40.5k posts</p>
           </div>
-          <button
-            class="bg-white text-black font-bold px-4 rounded-full hover:scale-110 absolute right-8 z-10">Follow</button>
-        </div>
-
-        <div
-          class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 w-full relative transition-all ease-in delay-50 hover:bg-gray-900">
-          <div class="flex gap-2">
-
-            <div class="w-12">
-              <img class="w-12 rounded-full" src="./assets/images/amrutha_j.png" alt="" srcset="">
-            </div>
-
-            <div class="flex flex-col">
-              <h3 class="text-xl font-medium">Amrutha</h3>
-              <p class="text-sm text-gray-400">32.9k Followers</p>
-            </div>
-
+          <div
+            class="item  border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900">
+            <p class="text-sm text-gray-400">Trending in Youtube</p>
+            <h3 class="text-xl font-bold"># Code With Harry</h3>
+            <p class="text-sm text-gray-400">20.7k posts</p>
           </div>
-          <button
-            class="bg-white text-black font-bold px-4 rounded-full hover:scale-110 absolute right-8 z-10">Follow</button>
-        </div>
-
-        <div
-          class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900 relative">
-          <div class="flex gap-2">
-            <div class="w-12">
-              <img class="w-12 rounded-full" src="./assets/images/ganashree.jpg" alt="" srcset="">
-            </div>
-            <div class="flex flex-col">
-              <h3 class="text-xl font-medium">Ganashree</h3>
-              <p class="text-sm text-gray-400">21.7k Followers</p>
-            </div>
+          <div
+            class="item  border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900">
+            <p class="text-sm text-gray-400">What's New</p>
+            <h3 class="text-xl font-bold"># React JS Technology</h3>
+            <p class="text-sm text-gray-400">450.2k posts</p>
           </div>
-          <button
-            class="bg-white text-black font-bold px-4 rounded-full hover:scale-110 absolute right-8 z-10">Follow</button>
+  
+  
+          <a href="#" class="px-3 text-blue-600 hover:text-blue-500 hover:text-[1.025rem]">Show more ...</a>
+  
         </div>
-
-        <a href="#" class="px-3 text-blue-600 hover:text-blue-500 hover:text-[1.025rem]">Show more ...</a>
-
+  
+        <div class="who w-[65%] bg-[#16181c] mx-2 my-4 py-5 rounded-xl space-y-3">
+  
+          <h1 class="text-xl  font-bold px-3">Who To Follow</h1>
+  
+  
+          <div
+            class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900 relative">
+            <div class="flex gap-2">
+              <div class="w-12">
+                <img class="w-fit rounded-full" src="./assets/images/Akasha.png" alt="" srcset="">
+              </div>
+              <div class="flex flex-col">
+                <h3 class="text-xl font-medium">Akash K R</h3>
+                <p class="text-sm text-gray-400">43.2k Followers</p>
+              </div>
+            </div>
+            <button
+              class="bg-white text-black font-bold px-4 rounded-full hover:scale-110 absolute right-8 z-10">Follow</button>
+          </div>
+  
+          <div
+            class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 w-full relative transition-all ease-in delay-50 hover:bg-gray-900">
+            <div class="flex gap-2">
+  
+              <div class="w-12">
+                <img class="w-12 rounded-full" src="./assets/images/amrutha_j.png" alt="" srcset="">
+              </div>
+  
+              <div class="flex flex-col">
+                <h3 class="text-xl font-medium">Amrutha</h3>
+                <p class="text-sm text-gray-400">32.9k Followers</p>
+              </div>
+  
+            </div>
+            <button
+              class="bg-white text-black font-bold px-4 rounded-full hover:scale-110 absolute right-8 z-10">Follow</button>
+          </div>
+  
+          <div
+            class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900 relative">
+            <div class="flex gap-2">
+              <div class="w-12">
+                <img class="w-12 rounded-full" src="./assets/images/ganashree.jpg" alt="" srcset="">
+              </div>
+              <div class="flex flex-col">
+                <h3 class="text-xl font-medium">Ganashree</h3>
+                <p class="text-sm text-gray-400">21.7k Followers</p>
+              </div>
+            </div>
+            <button
+              class="bg-white text-black font-bold px-4 rounded-full hover:scale-110 absolute right-8 z-10">Follow</button>
+          </div>
+  
+          <a href="#" class="px-3 text-blue-600 hover:text-blue-500 hover:text-[1.025rem]">Show more ...</a>
+  
+        </div>
       </div>
-
-
     </div>
 
   </div>
