Changed Personal Images to Local Images

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="flex gap-3">
 
             <div class="user_img w-12">
-              <img class=" rounded-full" src="./assets/images/IMG_20220805_102039_302.jpg" alt="">
+              <img class=" rounded-full" src="./assets/images/boy.jpeg" alt="">
             </div>
 
             <div class="user_info flex flex-col justify-center">
@@ -225,7 +225,7 @@
       <div class="for_you mx-4 my-2 space-y-7 space-x-4 flex">
 
         <div class="for_you_img my-5 w-[15%] ">
-          <img src="./assets/images/IMG_20220805_102039_302.jpg" class="rounded-full" alt="" srcset="">
+          <img src="./assets/images/boy.jpeg" class="rounded-full" alt="" srcset="">
         </div>
 
         <div class="for_you_main flex flex-col space-y-4 w-full">
@@ -258,7 +258,7 @@
           <div class="post_inside flex gap-3 relative">
 
             <div class="p_image w-14">
-              <img class="w-[100%] rounded-full" src="./assets/images/IMG_20220805_102039_302.jpg" alt="">
+              <img class="w-[100%] rounded-full" src="./assets/images/boy.jpeg" alt="">
             </div>
 
             <div class="acc_details flex flex-col">
@@ -360,7 +360,7 @@
           <div class="post_inside flex gap-3 relative">
 
             <div class="p_image w-14">
-              <img class="w-[100%] rounded-full" src="./assets/images/amrutha_j.png" alt="">
+              <img class="w-[100%] rounded-full" src="./assets/images/girl.jpeg" alt="">
             </div>
 
             <div class="acc_details flex flex-col">
@@ -462,7 +462,7 @@
           <div class="post_inside flex gap-3 relative">
 
             <div class="p_image w-14">
-              <img class="w-[100%] rounded-full" src="./assets/images/Akasha.png" alt="">
+              <img class="w-[100%] rounded-full" src="./assets/images/boy.jpeg" alt="">
             </div>
 
             <div class="acc_details flex flex-col">
@@ -564,7 +564,7 @@
           <div class="post_inside flex gap-3 relative">
   
             <div class="p_image w-14">
-              <img class="w-[100%] rounded-full" src="./assets/images/ganashree.jpg" alt="">
+              <img class="w-[100%] rounded-full" src="./assets/images/girl.jpeg" alt="">
             </div>
   
             <div class="acc_details flex flex-col">
@@ -715,7 +715,7 @@
             class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900 relative">
             <div class="flex gap-2">
               <div class="w-12">
-                <img class="w-fit rounded-full" src="./assets/images/Akasha.png" alt="" srcset="">
+                <img class="w-fit rounded-full" src="./assets/images/boy.jpeg" alt="" srcset="">
               </div>
               <div class="flex flex-col">
                 <h3 class="text-xl font-medium">Akash K R</h3>
@@ -731,7 +731,7 @@
             <div class="flex gap-2">
 
               <div class="w-12">
-                <img class="w-12 rounded-full" src="./assets/images/amrutha_j.png" alt="" srcset="">
+                <img class="w-12 rounded-full" src="./assets/images/girl.jpeg" alt="" srcset="">
               </div>
 
               <div class="flex flex-col">
@@ -748,7 +748,7 @@
             class="person-items flex space-x-2 justify-between items-center border-transparent hover:cursor-pointer hover:border hover:border-x-0 hover:border-y-gray-500 py-2 my-2 px-3 transition-all ease-in delay-50 hover:bg-gray-900 relative">
             <div class="flex gap-2">
               <div class="w-12">
-                <img class="w-12 rounded-full" src="./assets/images/ganashree.jpg" alt="" srcset="">
+                <img class="w-12 rounded-full" src="./assets/images/girl.jpeg" alt="" srcset="">
               </div>
               <div class="flex flex-col">
                 <h3 class="text-xl font-medium">Ganashree</h3>
